# libpacstall

./: Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: rust.yml
examples/: distro_check.rs  interface_with_shell.rs  parsing_pacstallrepo.rs  parsing_update.rs  print_distro.rs  print_packages.rs  repo_handling.rs  search.rs  source_entry.rs
src/: lib.rs  srcinfo.rs  sys.rs
src/local/: metalink.rs  mod.rs  pkglist.rs  repos.rs  update.rs
src/pkg/: keys.rs  mod.rs  package.rs
src/repo/: mod.rs  repo.rs  repo_type.rs  repos.rs  update.rs
src/sys/: builtins.rs  mod.rs  shell.rs  vars.rs
tests/: print_packages.rs  read_and_print.rs
