[package]
name = "libpacstall"
version = "0.1.8"
edition = "2024"
authors = [
    "Elsie <hwengerstickel@pm.me>"
]
description = "Backend API library for Pacstall"
repository = "https://github.com/Elsie19/libpacstall"
license = "GPL-3.0-or-later"
keywords = ["aur", "pacstall", "package-manager", "linux", "apt"]

[dependencies]
debversion = "0.4.4"
serde = { version = "1.0.219", optional = true, features = ["derive"] }
thiserror = "2.0.12"
url = "2.5.4"

[features]
serde = ["dep:serde", "serde/derive", "url/serde", "debversion/serde"]

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }

[[example]]
name = "print_packages"
doc-scrape-examples = true

[[example]]
name = "source_entry"
doc-scrape-examples = true
