[package]
name = "libpacstall"
version = "0.2.0"
edition = "2024"
authors = [
    "Elsie <hwengerstickel@pm.me>"
]
description = "Backend API library for Pacstall"
repository = "https://github.com/Elsie19/libpacstall"
license = "GPL-3.0-or-later"
keywords = ["aur", "pacstall", "package-manager", "linux", "apt"]

[dependencies]
brush-core = "0.3.0"
csv = "1.3.1"
debversion = { version = "0.4.4", features = ["serde"] }
etc-os-release = { version = "0.1.1", features = ["url"] }
num_cpus = "1.16.0"
serde = { version = "1.0.219", features = ["derive"] }
sprintf = "0.4.0"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = "1.44.2"

[[example]]
name = "print_packages"
doc-scrape-examples = true

[[example]]
name = "repo_handling"
doc-scrape-examples = true

[[example]]
name = "print_distro"
doc-scrape-examples = true

[[example]]
name = "interface_with_shell"
doc-scrape-examples = true
