[package]
name = "libpacstall"
version = "0.5.0"
edition = "2024"
authors = ["Elsie <hwengerstickel@pm.me>"]
description = "Backend API library for Pacstall"
repository = "https://github.com/Elsie19/libpacstall"
license = "GPL-3.0-or-later"
keywords = ["aur", "pacstall", "package-manager", "linux", "apt"]

[dependencies]
brush-core = "0.3.1"
colored = "3.0.0"
csv = "1.3.1"
debversion = { version = "0.4.4", features = ["serde"] }
etc-os-release = { version = "0.1.1", features = ["url"] }
nom = "8.0.0"
reqwest = { version = "0.12.15" }
serde = { version = "1.0.219", features = ["derive"] }
sprintf = "0.4.0"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
sysinfo = "0.35.1"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
tokio = "1.44.2"

[[example]]
name = "print_packages"
doc-scrape-examples = true

[[example]]
name = "repo_handling"
doc-scrape-examples = true

[[example]]
name = "print_distro"
doc-scrape-examples = true
